# asm-lsp

./: .gitignore  Cargo.toml  README.md  flake.nix  grammar.js  justfile  package.json
.github/workflows/: build.yml
bindings/node/: binding.cc  index.js
example_files/: example.S
lsp/: Cargo.toml
lsp/src/: completion.rs  doc.rs  main.rs  utils.rs
src/: grammar.json  node-types.json  parser.c
test/corpus/: binary_search.txt  example.txt
tree-sitter-riscv-asm/: grammar.js
tree-sitter-riscv-asm/test/corpus/: label.txt  relocation.txt
tree-sitter-riscvasm/: Cargo.toml  binding.gyp  grammar.js  package.json
tree-sitter-riscvasm/bindings/rust/: lib.rs
tree-sitter-riscvasm/src/: grammar.json  node-types.json  parser.c
tree-sitter-riscvasm/test/corpus/: binary_search.txt  relocation.txt
