[package]
name = "lsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tree-sitter-riscvasm = { path = "../tree-sitter-riscvasm" }
tree-sitter = "0.20.9"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
snafu = "0.7.4"
tower-lsp = "0.18.0"
tokio = {version = "1.25.0", default-features = false, features = ["rt", "tracing", "io-std", "macros", "rt-multi-thread" ] }
dashmap = "5.4.0"
ropey = "1.5.1"
nll = { git = "https://github.com/EspressoSystems/nll" }

[profile.release]
incremental = true

#serde_json = "1.0.85"
#ra_ap_lsp-server = "0.0.122"
#lsp-types = "0.93.1"
#ra_ap_vfs = "0.0.122"
#ra_ap_rust-analyzer = "0.0.122"
#crossbeam-channel = "0.5.6"
