[package]
name = "tree-sitter-riscvasm"
description = "RISC-V Assembly grammar for tree-sitter"
version = "0.0.1"
keywords = ["incremental", "parsing", "riscv", "riscvasm"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/asm-lsp/tree-sitter-riscvasm"
edition = "2021"
license = "MIT"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20.10"

[build-dependencies]
cc = "~1.0.83"
